# vsync

./: .gitignore  CMakeLists.txt  CPackOptions.cmake.in  OWNCLOUD.cmake  OwnCloudCPack.cmake  README.md  VERSION.cmake  license.rtf  license.txt
admin/osx/: CMakeLists.txt  create_mac.sh.cmake  license.rtf  macosx.pkgproj.cmake  osxfuse.xml  post_install.sh.cmake  pre_install.sh.cmake  readme.rtf
admin/osx/Uninstall.app/Contents/: Info.plist  document.wflow
admin/osx/Uninstall.app/Contents/MacOS/: Application Stub
admin/osx/Uninstall.app/Contents/Resources/: AutomatorApplet.icns
admin/osx/Uninstall.app/Contents/_CodeSignature/: CodeResources
admin/win/: download_runtimes.sh
admin/win/docker/: build.sh
admin/win/nsi/: MoveFileFolder.nsh
admin/win/nsi/l10n/: Basque.nsh  Catalan.nsh  Czech.nsh  Dutch.nsh  English.nsh  Estonian.nsh  Farsi.nsh  Finnish.nsh  French.nsh  Galician.nsh  German.nsh  Greek.nsh  Hungarian.nsh  Italian.nsh  Japanese.nsh  Norwegian.nsh  Polish.nsh  Portuguese.nsh  PortugueseBR.nsh  Russian.nsh  SimpChinese.nsh  Slovak.nsh  Slovenian.nsh  Spanish.nsh  Swedish.nsh  Thai.nsh  (+4 more)
cmake/modules/: MacOSXBundleInfo.plist.in  NSIS.template.in
src/csync/: csync_exclude.cpp
src/gui/: accountsettings.cpp  accountsettings.ui  accountstate.cpp  activitywidget.cpp  application.cpp  folderstatusdelegate.cpp  folderwatcher_linux.cpp  folderwizard.cpp  generalsettings.cpp  generalsettings.ui  issueswidget.cpp  owncloudgui.cpp  owncloudsetupwizard.cpp  protocolwidget.cpp  syncrunfilelog.cpp  version.rc.in
src/gui/updater/: ocupdater.cpp  updateinfo.cpp  updater.cpp
src/gui/wizard/: owncloudadvancedsetuppage.cpp  owncloudhttpcredspage.cpp
src/libsync/: configfile.cpp  owncloudtheme.cpp  owncloudtheme.h
